<resources>
    <string name="app_name">FakeCall</string>
    <string name="title_home">Volaj</string>
    <string name="title_dashboard">Cisla</string>
    <string name="title_notifications">Info</string>
    <string name="zadaj_cislo">Enter number</string>
    <string name="volam_cislo">Calling number: %s</string>
    <string name="string">%s</string>
    <string name="notification_title">Fake call</string>
    <string name="zle_zadane_cislo">Wrong phone number entered!</string>
    <string name="zadaj_meno_volajuceho">Enter the caller\'s name!</string>
    <string name="decline_call">Decline call</string>
    <string name="make_call">Make call</string>
    <string name="default_calling_avatar">Default calling avatar</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="title_activity_prichadzajuci_hovor">PrichadzajuciHovorActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="deleteContacts">Delete contact history</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="accept_call">accept call</string>
    <string name="calling_avatar">calling avatar</string>
    <string name="waitingInMinutes">Waiting %d minutes</string>
    <string name="hours_minutes">Hours | Minutes</string>
    <string name="info_text">This is app for pranks/fake calls\n Enjoy!</string>
    <string name="call">call</string>
    <string name="call_name">%s is calling!</string>
    <string name="doubleString">%s %s</string>

</resources>