<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="szathmary.peter.fakecall.ui.home.VolajFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_cisla" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="szathmary.peter.fakecall.ui.dashboard.CislaFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_volaj" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="szathmary.peter.fakecall.ui.notifications.InfoFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_info" />
</navigation>